Kubernetes/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: my-app-namespace
spec:
  selector:
    app: mongodb
  ports:
  - name: mongodb-port 
    protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
