Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-svc
  namespace: my-app-namespace
spec:
  selector:
    app: spring-boot-app
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
